# obs-shaderfilter

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  installer.iss.in  obs-shaderfilter.c  obs-websocket-api.h
.github/workflows/: build.yml
CI/macos/: obs-shaderfilter.pkgproj
data/examples/: BulgePinch.shader  Chroma+UV-Distortion.shader  Luminance.shader  Swirl.shader  VCR.shader  VHS.shader  ZigZag.shader  alpha_border.shader  audio.shader  blend_opacity.shader  bloom.shader  box-blur.shader  burn.shader  cell_shaded.shader  chromatic-aberration_blackbg.shader  clock_analog.shader  clock_digital_led.shader  clock_digital_nixie.shader  color_grade_filter.shader  corner-pin.shader  density_sat_hue.shader  divide_rotate.shader  drawings.shader  drop_shadow.shader  drunk.shader  dynamic-mask.shader  edge_detection.shader  embers.effect  emboss_color.shader  fire-3.effect  fire.shader  gaussian-blur-advanced.shader  gaussian-blur-simple.shader  gb-camera.shader  glitch_analog.effect  glitch_analog.shader  glow.shader  gradient.shader  heat-wave-simple.shader  hexagon.shader  (+30 more)
data/locale/: en-US.ini
